
	* GNUmakefile.in (DLL_VER): rename as PTW32_VER.
	* Makefile (DLL_VER): Likewise.
	* Bmakefile (DLL_VER): Likewise; does anyone use this anymore?
	* Makefile: Variable renaming: e.g. VCLIB to VCIMP for DLL import
	library pthreadVC2.lib and VCLIB now holds static library name
	libpthreadVC2.lib, and similar for the other cleanup method versions.

2018-07-22  Mark Pizzolato <markpizzolato dash pthreads dash win32 at subscriptions dot pizzolato dot net>

	* Makefile: Change the various static test runs to actually
	compile with /MT or /MTd, i.e. No mixed /MT and /MD. Static
	builds no longer create a separate pthreads*.lib static library
	because errno does not work across that linkage.
	* sequence1.c: Use more reasonable number of threads to avoid
	resource limits.

2016-12-25  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Change all license notices to the Apache License 2.0

2016-12-21  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* mutex6.c: fix random failures by using a polling loop to replace
	a single Sleep().
	* mutex6n.c: Likewise.
	* mutex6s.c: Likewise.
	* mutex7.c: Likewise.
	* mutex7n.c: Likewise.
	* mutex8.c: Likewise
	* mutex8n.c: Likewise.
	* semaphore5.c: don't fail on expected sem_destroy EBUSY.

2016-12-20  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* all (PTW32_*): rename to __PTW32_*.
	(ptw32_*): rename to __ptw32_*.
	(PtW32*): rename to __PtW32*.
	* GNUmakefile: removed; must now configure from GNUmakefile.in.

2016-12-18  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* test.c  (__PTW32_TEST_SNEAK_PEEK): #define this to prevent some
	tests from failing (specifically "make GCX-small-static") with
	undefined __ptw32_autostatic_anchor. Checked in ../implement.h.
	* GNUMakfile.in: Rename testsuite log to test-specific name and
	do not remove.
	* GNUMakfile.in: Add realclean target

2016-04-30  Ross Johnson <ross dot johnson at homemail dot com dot au>
